--- a/publicaciones/templates/lista_publicaciones.html
+++ b/publicaciones/templates/lista_publicaciones.html
@@ -45,7 +45,7 @@
     </nav>
 
     <div class="container mt-4">
-        <h1 class="text-center text-primary">📢 Últimas Publicaciones - 18/12/2025</h1>
+        <h1 class="text-center text-primary">📢 Últimas Publicaciones - 18/12/2025 - David Dorante Lucas</h1>
 
         <!-- Formulario para crear publicaciones -->
         <div class="card shadow-sm p-4 mb-4">
